add a specialty crud for admin panel
